2017-03-09  Sam Steingold  <sds@gnu.org>

	* misc.d (LISP-IMPLEMENTATION-VERSION): Wrap atol() and strncmp()
	in begin_system_call/end_system_call.

2017-03-09  Bruno Haible  <bruno@clisp.org>

	Fix build failure with DEBUG_GCSAFETY.
	* lispbibl.d (INIT_SUBR_TAB, INIT_SYMBOL_TAB, INIT_OBJECT_TAB): Don't
	define if DEBUG_GCSAFETY && SINGLEMAP_MEMORY.

2017-03-09  Bruno Haible  <bruno@clisp.org>

	Fix some gcc warnings about use of fprintf.
	* spvw.d (init_memory): Cast specific fprintf arguments to
	'unsigned long'.
	* spvw_debug.d (nobject_out1): Cast specific fprintf arguments to 'int'
	or 'unsigned long'.
	(back_trace_depth): Cast specific fprintf arguments to 'unsigned long'.
	* spvw_memfile.d (loadmem_from_handle): Cast specific sprintf arguments
	to 'unsigned long'.
	* spvw_sigsegv.d (print_mem_stats): Cast specific fprintf arguments to
	'unsigned long long'.
	* eval.d (check_funtab, CHECK_STACK): Cast specific fprintf arguments to
	'unsigned long'.
	* predtype.d (with_gc_statistics): Likewise.
	* errunix.d (OS_error_arg): Likewise.

2017-03-09  Bruno Haible  <bruno@clisp.org>

	configure: Fail right away if configure could not create intparam.h.
	* configure: Fail immediately if configure could not create intparam.h
	or floatparam.h.

2017-03-08  Bruno Haible  <bruno@clisp.org>

	maint: Add facility for testing builds with DEBUG_GCSAFETY.
	* Makefile.devel (build-porting32-gcc-debug_gcsafety,
	build-porting64-gcc-debug_gcsafety): New targets.

2017-03-08  Sam Steingold  <sds@gnu.org>

	Modify the bug#679 fix: defer getting the TRUENAME of stdio and
	avoid resolving /proc symlinks to non-existing local files
	* lispbibl.d (file_stream_truename): Resolve the deferred TRUENAME.
	* makemake.in (check-script): Add 2 tests.
	* pathname.d (test_file_stream_named): Check name, not truename.
	(file_stream_truename): Move here from stream.d
	(get_path_info): Do not use local symlinks from "/proc".
	(TRUENAME, probe_path_from_stream, DELETE-FILE, RENAME-FILE, OPEN)